# color-mixer-service

./: Cargo.toml  Dockerfile  README.md
src/: lib.rs  main.rs  parser.rs
tests/api/: colors.rs  health_check.rs  helpers.rs  main.rs
