[package]
name = "color-mixer-service"
version = "0.1.0"
authors = ["Vishal Talwar <rawlatv@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "color-mixer-service"

[dependencies]
actix-cors = "0.6.1"
actix-web = "4"
derive_more = "0.99.17"
pigment-mixing = { git = "https://github.com/virtualritz/pigment-mixing-rs.git" }
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
